--- a/CoreApiFundamentals/src/appsettings.json
+++ b/CoreApiFundamentals/src/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CodeCamp": "Server=20.73.31.152;Database=PSCodeCamp;Uid=sa;Pwd=Password1!;MultipleActiveResultSets=true;"
+    "CodeCamp": "*"
   }
 }
